--- a/lab01/css/style.css
+++ b/lab01/css/style.css
@@ -78,3 +78,165 @@ div#zamovnyky {
     border: 1px solid #000000;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
 }
+
+/*Three column layout*/
+.col-3 {
+    margin: 0;
+    float: left;
+    width: 33.33%;
+}
+
+/*Two column layout*/
+.col-2 {
+    margin: 0;
+    float: left;
+    width: 50%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+#firstDiv {
+    margin: 2px;
+    padding: 2px;
+    border: 1px solid black;
+    overflow-y: scroll;
+    max-height: 200px
+}
+
+#secondDiv {
+    margin: 1px;
+    padding: 1px;
+    border: 2px dotted gray;
+    background: url("https://p.bigstockphoto.com/GeFvQkBbSLaMdpKXF1Zv_bigstock-Aerial-View-Of-Blue-Lakes-And--227291596.jpg") center fixed no-repeat;
+    background-size: 100%;
+}
+
+#thirdDiv {
+    margin: 0;
+    padding: 0;
+    border: 3px dashed lightcoral;
+    column-count: 4;
+    column-gap: 20px;
+    text-align: justify;
+}
+
+#fourthDiv {
+    width: 100vw;
+    margin: 3px;
+    padding: 5px;
+    border: 5px groove lawngreen;
+    max-width: 60%;
+    font-family: 'Montserrat Subrayada', sans-serif;
+}
+
+#h3shadowed {
+    text-shadow: #FC0 1px 0 10px;
+    background: none;
+    margin: 40px;
+    color: black;
+}
+
+#alignedImage {
+    width: 300px;
+    height: auto;
+    float: left;
+}
+
+#saveBtn:disabled {
+    color: #2651b4;
+    background-color: lightcoral;
+    width: 40px;
+    padding: 5px;
+}
+
+#saveBtn:enabled {
+    color: lightcoral;
+    background-color: #123456;
+    width: 50px;
+    padding: 2px;
+}
+
+#cancelBtn:disabled {
+    color: #491e25;
+    background-color: lawngreen;
+    width: 100px;
+    padding: 15px;
+}
+
+#cancelBtn:enabled {
+    color: #000000;
+    background-color: white;
+    width: 60px;
+    padding: 1px;
+}
+
+#firstDivInRow {
+    margin: 1px;
+    padding: 3px;
+    border: 4px lightcoral;
+    background-color: #d1c39c;
+    border-radius: 7px;
+}
+
+#secondDivInRow {
+    margin: 2px;
+    padding: 5px;
+    border: 3px dashed lightgreen;
+    background: url("https://p.bigstockphoto.com/GeFvQkBbSLaMdpKXF1Zv_bigstock-Aerial-View-Of-Blue-Lakes-And--227291596.jpg") repeat;
+}
+
+#thirdDivInRow {
+    margin: 3px;
+    padding: 7px;
+    border: 1px dotted lightblue;
+    background-image: linear-gradient(to bottom, red, orange, yellow, green, blue, indigo, violet);
+}
+
+#firstDivIn2Row {
+    transition: all 2s ease-in-out;
+}
+
+#firstDivIn2Row:hover {
+    transform: translate(2px, 10px);
+}
+
+#secondDivIn2Row {
+    transition: all 2s ease-in-out;
+}
+
+#secondDivIn2Row:hover {
+    transform: rotate(15deg);
+}
+
+#thirdDivIn2Row {
+    transition: all 2s ease-in-out;
+}
+
+#thirdDivIn2Row:hover {
+    transform: scale(1.2);
+}
+
+#anotherDiv {
+    transition: all 1s ease-in-out;
+    margin: 3px;
+    padding: 15px;
+    border: 1px solid black;
+    background: url("https://as.ftcdn.net/r/v1/pics/7b11b8176a3611dbfb25406156a6ef50cd3a5009/home/discover_collections/optimized/image-2019-10-11-11-36-27-681.jpg") center no-repeat;
+    background-size: 100%;
+    background-position-y: -50px;
+    height: 300px;
+    max-height: 300px;
+}
+
+#anotherDiv:hover {
+    width: 60%;
+    margin: 0 auto;
+    background-position-y: 0;
+    color: white;
+    text-shadow: black 2px 2px;
+}
